--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -30,7 +30,8 @@
       </div>
 
       <div id="header-image">
-
+        <div id="content">
+        </div>
       </div>
       
       <div id="above-content-wrapper">
