Make menu pixel perfect. Design adjustments. Add separator in between languages for the language selector

--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -57,11 +57,14 @@
     </div> <!-- website wrapper -->
 
     <div class="cd-nav-trigger outside" aria-label="Menu">
-        <span class="cd-nav-icon"></span>
+        <span></span>
+        <span></span>
+        <span></span>
     </div>
 
     <div id="cd-nav" class="cd-nav">
         <div class="cd-navigation-wrapper">
+            <div id="menu-language-selector"></div>
             <div class="main-block">
                 <div id="mainnavigation-wrapper">
                   <div id="mainnavigation">
