--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
 
-        <div class="container">
+        <div class="container main-container-wrapper">
           <div class="row">
             <aside id="global_statusmessage"></aside>
           </div>
