--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -18,8 +18,11 @@
               </header>
             
               <div id="header-wrapper">
-                  <div class="container">
+                  <div class="container main"></div>
 
+                  <div class="container layout">
+                      <div class="title"></div>
+                      <div class="description"></div>
                   </div>
               </div>
         </div>
