--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -29,6 +29,8 @@
 
         <div id="header-image">
           <div id="content">
+            <div class="leadImage">
+            </div>
           </div>
         </div>
         
