--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -1,10 +1,23 @@
 <!doctype html>
 <html>
   <head>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-MKPZ3JS');</script>
+    <!-- End Google Tag Manager -->
+
     <title>INTK</title>
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MKPZ3JS"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <section id="portal-toolbar">
     </section>
 
@@ -52,7 +65,6 @@
         
         </div><!--/container-->
       </div> <!--/outer-wrapper -->
-
 
       <footer id="portal-footer-wrapper">
           <div class="container" id="portal-footer">
