--- a/src/plonetheme/intkwebsite/theme/index.html
+++ b/src/plonetheme/intkwebsite/theme/index.html
@@ -9,6 +9,13 @@
     })(window,document,'script','dataLayer','GTM-MKPZ3JS');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- UIkit CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.6/dist/css/uikit.min.css" />
+
+    <!-- UIkit JS -->
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.6/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.6/dist/js/uikit-icons.min.js"></script>
+
     <title>INTK</title>
   </head>
 
